@@ -5,6 +5,9 @@
 # include <config.h>
 #endif
 
+/* This is required to get `size_t' on some systems. */
+#include <sys/types.h>
+
 #ifdef NEED_GNOMESUPPORT_H
 #include <gnomesupport.h>
 #endif
